--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "version": 1,
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
