--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.8",
     "@types/mongodb": "^4.0.6",
+    "@types/nodemon": "^1.19.6",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vercel/node": "^3.2.29",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
-    "nodemon": "^2.0.4",
+    "nodemon": "^3.1.7",
     "prettier": "^3.4.2",
     "supertest": "^6.1.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
