--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist", // Redirect output structure to the directory
     "rootDir": "./src", // Specify the root directory of input files
     "strict": true, // Enable all strict type-checking options
-    "esModuleInterop": true // Enables emit interoperability between CommonJS and ES Modules
+    "esModuleInterop": true, // Enables emit interoperability between CommonJS and ES Modules
+    "skipLibCheck": true // Enables emit interoperability between CommonJS and ES Modules
   },
   "include": ["src/**/*"], // Files to include in the compilation
   "exclude": ["node_modules", "**/*.spec.ts"] // Files to exclude
